:bug: Remove blur on mobile devices
This caused that on some phones the images were not loading properly

--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -438,6 +438,15 @@
     font-size: 2em;
   }
 
+  .blog {
+    .post {
+      .lazyloaded {
+        filter: unset;
+        transition: none;
+      }
+    }
+  }
+
   section h1 {
     padding: 0 1em;
   }
